# cookiecutter-fastapi

./: .gitignore  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yaml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: app.py
