[tool.poetry]
package-mode = false
name = "cookiecutter-fastapi"
version = "0.1.0"
description = "A cookiecutter application"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.cookiecutter.dependencies]
fastapi-slim = "^0.115.0"
mangum = "^0.17.0"
httpx = "^0.20.0"
uvicorn = "^0.30.6"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
